Add Base64 encode and decode